# ocaml-c-stubs-playground

./: .gitignore  Makefile  README.md  dune-project  run.sh
libplayground/: Makefile
libplayground/include/: animal.h  playground.h
libplayground/src/: animal.c  playground.c
libsum/: Makefile  nondune
libsum/src/: sum.c
src/: dune  main.ml
src/playground/: dune  playground.ml  playground_stubs.c
src/sum/: dune  sum.ml  sum_stubs.c
src/suml/: dune  sum.ml  sum_stubs.c
src/suml/libsum/include/: sum.h
